--- a/config/locales/devise_invitable.en.yml
+++ b/config/locales/devise_invitable.en.yml
@@ -17,14 +17,14 @@ en:
         submit_button: "Set my password"
     mailer:
       invitation_instructions:
-        subject: "Invitation instructions: Tool for Systemic Change"
-        hello: "Hello %{email}"
+        subject: "Invitation instructions for Obsekio: the Tool for Systemic Change"
+        hello: "Hello %{invitee}"
         someone_invited_you: |
-          You have been invited to begin using <strong>Wicked Lab's</strong> %{link}.
+          You have been invited to begin using %{link}.
           <br /><br />
           To begin creating systems change - accept it through the link below.
         accept: "Accept invitation"
-        accept_until: "This invitation will be due in %{due_date}."
+        accept_until: "This invitation expires on %{due_date}."
         access_guides: "You can access %{link}."
         access_guides_link: "User Guides here"
         ignore: "If you don't want to accept the invitation, please ignore this email.<br />\nYour account won't be created until you access the link above and set your password."
