--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,5 +30,5 @@ en:
     models:
       transition_card: Impact Card
       sustainable_development_goal_alignment_card: SDGs Alignment Card
-      wicked_problem: Wicked Problem / Opportunity
+      wicked_problem: Problem / Opportunity
       organisation: Stakeholder
