1176 fixed column names, added impact card type

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,8 @@ en:
         suggestion: Suggestion / idea
         more_information: More information
     models:
-      transition_card: Impact Card
+      scorecard: Impact Card
+      transition_card: Transition Card
       sustainable_development_goal_alignment_card: SDGs Alignment Card
       wicked_problem: Problem / Opportunity
       organisation: Stakeholder
